syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc. above.account_service";
option java_outer_classname = "AccountServiceProto";

package above.account_service;

service User {
  rpc Healthcheck (HealthcheckRequest) returns (HealthcheckReply) {}
  rpc CreateUser (UserCreateRequest) returns (UserCreateReply) {}
}

message UserCreateRequest {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string address = 4;
  int32 age = 5;
}

message UserCreateReply {
  string status = 1;
}

message HealthcheckRequest {}

message HealthcheckReply {
  string status = 1;
}